--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 JWT_SECRET = "random#secret"
 STRIPE_SECRET_KEY="sk_test_4eC39HqLyjWDarjtT1zdp7dc"
 MONGO_URI="mongodb+srv://kainfuon:Test12345678@cluster0.ayrph.mongodb.net/food-del"
+GEMINI_API_KEY="AIzaSyCuwqIMS_MnBHQ4cxd1RPnyj3c9MPrQNTQ"
